--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,15 @@
     "type": "split",
     "children": [
       {
-        "id": "a4c8f4083337d88d",
+        "id": "a19609d7451901a7",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Consumer Search.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -65,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Consumer Search.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a4c8f4083337d88d",
+  "active": "a19609d7451901a7",
   "lastOpenFiles": [
-    "Bayesian game.md",
-    "Perfect and complete information.md",
-    "Subgame perfect equilibrium.md",
-    "Subgame perfect.md",
-    "Strategic game.md",
-    "Subjective expected utility maximization.md",
-    "Zero-sum game.md",
-    "Nash equilibrium.md",
+    "Consumer Search.md",
+    "Industrial Organization.md",
+    "Consumer choice.md",
+    "Papers/Garcia 2018 Consumer search with observational learning.md",
+    "Open questions.md",
+    "Bounded rationality.md",
     "Math for microeconomics.md",
-    "vNM expected utility theory.md"
+    "New Keynesian models.md",
+    "Euler equation.md",
+    "Lifetime discounted utility.md"
   ]
 }
